maybe fixed vertical scrolling on mobile

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -101,6 +101,7 @@ body {
   right: 0;
   bottom: 0;
   padding-left: 5em;
+  overflow: scroll;
 }
 
 .floater {
